--- a/src/components/common/Social.astro
+++ b/src/components/common/Social.astro
@@ -80,7 +80,14 @@ const iconClass =
             rel="noopener noreferrer nofollow"
           >
             <span class="sr-only">GitHub</span>
-            <FaGithub className="w-6 h-6" />
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 24"
+              fill="currentColor"
+              class="w-6 h-6"
+            >
+              <path d="M12 0C5.37 0 0 5.37 0 12c0 5.3 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.09-.745.083-.729.083-.729 1.205.085 1.84 1.236 1.84 1.236 1.07 1.835 2.807 1.305 3.492.998.108-.775.418-1.305.762-1.605-2.665-.305-5.466-1.333-5.466-5.93 0-1.31.468-2.38 1.235-3.22-.124-.303-.536-1.523.117-3.176 0 0 1.008-.322 3.3 1.23a11.5 11.5 0 0 1 3.003-.404c1.02.005 2.047.138 3.003.404 2.29-1.552 3.297-1.23 3.297-1.23.655 1.653.243 2.873.12 3.176.77.84 1.233 1.91 1.233 3.22 0 4.61-2.805 5.62-5.476 5.92.43.37.823 1.096.823 2.21v3.285c0 .322.217.694.825.576C20.565 21.796 24 17.297 24 12c0-6.63-5.37-12-12-12z" />
+            </svg>
           </a>
         </li>
       )}
@@ -108,7 +115,9 @@ const iconClass =
             rel="noopener noreferrer nofollow"
           >
             <span class="sr-only">LinkedIn</span>
-            <FaLinkedin className="w-6 h-6" />
+            <svg class="w-6 h-6" viewBox="0 0 24 24" fill="currentColor">
+              <path d="M4.98 3.5C4.98 4.88 3.86 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1 4.98 2.12 4.98 3.5zM0 8h5v16H0V8zm7.5 0h4.78v2.18h.07c.66-1.25 2.28-2.57 4.7-2.57C21.42 7.61 24 10.1 24 15.26V24h-5v-7.76c0-1.85-.03-4.23-2.58-4.23-2.58 0-2.98 2.01-2.98 4.09V24h-5V8z" />
+            </svg>{" "}
           </a>
         </li>
       )}
