Adding Umami tracking

--- a/src/components/base/BaseLayout.astro
+++ b/src/components/base/BaseLayout.astro
@@ -47,6 +47,10 @@ const baseUrl = "https://westcoastcode.com";
       sizes="16x16"
       href="/favicon/favicon-16x16.png"
     />
+    <script
+      defer
+      src="https://cloud.umami.is/script.js"
+      data-website-id="357b3c52-681b-4a66-8ff9-4cd861ba7e17"></script>
 
     <link rel="sitemap" href="/sitemap-index.xml" />
 
